[package]
name = "lwip-rs"
version = "0.1.0"
authors = ["azrael <azrael@local.net>"]
edition = "2021"

[dependencies]
env_logger = "0.9.0"
chrono = "0.4.19"
log = "0.4.14"
des = "0.7.0"
cipher = "0.3.0"
rand = "0.8"
socket2 = "0.4.4"
pcap = "0.9.2"


[dev-dependencies]
clap = "3.1.18"

[lib]
name = "lwip"
crate-type = ["staticlib"]
path = "src/lib.rs"

[[bin]]
name = "lwip"
path = "src/main.rs"

[[example]]
name = "lwipdump"
path = "examples/lwip_dump.rs"
